Remove AWS SDK and migration tools, update Vert.x
Removed AWS SDK dependencies from build.gradle.kts to address memory issues and updated Vert.x to version 4.5.10. Deleted PrintToLogMigration and Slf4jToCustomLoggerMigration tools from the codebase as they are no longer needed. Adjusted JVM arguments for reduced memory usage and improved GC logging.